# Clinic-Management-System

./: CMakeLists.txt  README.md  addemergencypatient.cpp  addemergencypatient.h  addemergencypatient.ui  addnormalpatient.cpp  addnormalpatient.h  addnormalpatient.ui  dischargepatient.cpp  dischargepatient.h  dischargepatient.ui  linkedlist.cpp  linkedlist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nextpatientinfo.cpp  nextpatientinfo.h  nextpatientinfo.ui  searchbydoctorname.cpp  searchbydoctorname.h  searchbydoctorname.ui  searchpatientbyname.cpp  searchpatientbyname.h  searchpatientbyname.ui  searchpatientbytoken.cpp  searchpatientbytoken.h  searchpatientbytoken.ui  servenextpatient.cpp  servenextpatient.h  servenextpatient.ui  showallpatients.cpp  showallpatients.h  showallpatients.ui  updatepatientinfo.cpp  updatepatientinfo.h  updatepatientinfo.ui
